--- a/.hintrc
+++ b/.hintrc
@@ -29,7 +29,8 @@
     "axe/aria": [
       "default",
       {
-        "aria-required-children": "off"
+        "aria-required-children": "off",
+        "aria-required-parent": "off"
       }
     ]
   }
