--- a/.hintrc
+++ b/.hintrc
@@ -32,6 +32,7 @@
         "aria-required-children": "off",
         "aria-required-parent": "off"
       }
-    ]
+    ],
+    "disown-opener": "off"
   }
 }
